fixing main page on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,7 @@ body {
     text-align: center;
     padding: 40px 30px 40px 30px;
     background-color: white;
-    margin: 30px 60px 30px 60px;
+    margin: 30px 30px 30px 30px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
     font-size: 12pt;
@@ -317,8 +317,8 @@ h4{
 .button{
   color: white;
   background-color: #00274C;
-  padding: 15px 20px 15px 20px;
-  margin: 30px 20px 30px 30px;
+  padding: 15px 10px 15px 10px;
+  margin: 30px 0px 30px 0px;
   border-radius: 3px 3px 3px 3px;
   text-decoration: none;
 }
@@ -386,7 +386,7 @@ h4{
 
 /* Slideshow container */
 .slideshow-container {
-  width: 300px;
+  width: 250px;
   position: relative;
   margin: auto;
   margin-top: 30px;
@@ -469,6 +469,20 @@ h4{
     font-size: 12pt;
     color:rgb(65, 65, 65);
   }
+
+  #mainpagebuttons{
+    margin: 60px 0px 20px 0px;
+  }
+  
+  .button{
+    color: white;
+    background-color: #00274C;
+    padding: 15px 20px 15px 20px;
+    margin: 30px 20px 30px 30px;
+    border-radius: 3px 3px 3px 3px;
+    text-decoration: none;
+  }
+
 
 }
 
